--- a/Hausautomation/Pages/PageAll.xaml
+++ b/Hausautomation/Pages/PageAll.xaml
@@ -18,16 +18,16 @@
         <TextBlock Grid.Row="0" Margin="12" Style="{ThemeResource BodyTextBlockStyle}"
                    Text="Klicke auf die Listeneinträge um sie als Favoriten zu markieren"/>
 
-        <ListView x:Name="lvDevices" Grid.Row="1" ItemsSource="{x:Bind Devicelist}" IsItemClickEnabled="True" 
-                  SelectionMode="Multiple" ItemClick="lvDevices_ItemClick">
+        <ListView x:Name="lvDevices" Grid.Row="1" ItemsSource="{x:Bind Devicelist}">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="data:Device">
                     <RelativePanel>
-                        <Image x:Name="bmImage" Source="{x:Bind Image}" MaxWidth="150" Stretch="Uniform" Margin="0,24,0,24"/>
+                        <CheckBox x:Name="cbFavoriten" IsChecked="{x:Bind bFavoriten, Mode=TwoWay}" Margin="0,85,0,0" Click="cbFavoriten_Click"/>
+                        <Image x:Name="bmImage" Source="{x:Bind Image}" MaxWidth="150" Stretch="Uniform" Margin="34,24,0,24"/>
                         <TextBlock x:Name="tbTextblock1" RelativePanel.RightOf="bmImage" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock1}"/>
+                                   Margin="24,24,24,24" Text="{x:Bind Textblock1, Mode=OneWay}"/>
                         <Slider x:Name="slSlider1" RelativePanel.RightOf="tbTextblock1" Orientation="Vertical" TickFrequency="10"
-                                Margin="24,24,24,24" Height="150" TickPlacement="Outside" Value="{x:Bind iSlider1}"
+                                Margin="24,24,24,24" Height="150" TickPlacement="Outside" Value="{x:Bind iSlider1, Mode=TwoWay}"
                                 Visibility="{x:Bind bSlider1, Mode=OneWay}" ValueChanged="slSlider1_ValueChanged"/>
                         <Button x:Name="btButton1" RelativePanel.RightOf="tbTextblock1" Margin="27,60,24,24" Content="Ein"
                                 Visibility="{x:Bind bButton1, Mode=OneWay}" Click="btButton1_Click"/>
@@ -42,29 +42,29 @@
                         <Button x:Name="btButtonRe" RelativePanel.RightOf="tbTextblock1" Margin="65,85,15,24" Content="R"
                                 Visibility="{x:Bind bButton2, Mode=OneWay}" Click="btButtonRe_Click"/>
                         <ToggleSwitch x:Name="tgSwitch1" Margin="20,145,-100,24" RelativePanel.RightOf="tbTextblock1"
-                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind bSwitch1State}"
+                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind bSwitch1State, Mode=TwoWay}"
                                 Visibility="{x:Bind bSwitch1, Mode=OneWay}" Toggled="tgSwitch1_Toggled">
                             <ToggleSwitch.RenderTransform>
                                 <CompositeTransform Rotation="-90"/>
                             </ToggleSwitch.RenderTransform>
                         </ToggleSwitch>
                         <ToggleSwitch x:Name="tgSwitch2" Margin="0,145,-100,24" RelativePanel.RightOf="tgSwitch1"
-                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind bSwitch2State}"
+                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind bSwitch2State, Mode=TwoWay}"
                                 Visibility="{x:Bind bSwitch2, Mode=OneWay}" Toggled="tgSwitch2_Toggled">
                             <ToggleSwitch.RenderTransform>
                                 <CompositeTransform Rotation="-90"/>
                             </ToggleSwitch.RenderTransform>
                         </ToggleSwitch>
                         <TextBlock x:Name="tbTextblock2" RelativePanel.RightOf="slSlider1" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock2}" Visibility="{x:Bind bTextblock2, Mode=OneWay}"/>
+                                   Margin="24,24,24,24" Text="{x:Bind Textblock2, Mode=OneWay}" Visibility="{x:Bind bTextblock2, Mode=OneWay}"/>
                         <TextBlock x:Name="tbTextblock3" RelativePanel.RightOf="btButton1" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock3}" Visibility="{x:Bind bTextblock3, Mode=OneWay}"/>
+                                   Margin="24,24,24,24" Text="{x:Bind Textblock3, Mode=OneWay}" Visibility="{x:Bind bTextblock3, Mode=OneWay}"/>
                         <TextBlock x:Name="tbTextblock4" RelativePanel.RightOf="tgSwitch1" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock4}" Visibility="{x:Bind bTextblock4, Mode=OneWay}"/>
+                                   Margin="24,24,24,24" Text="{x:Bind Textblock4, Mode=OneWay}" Visibility="{x:Bind bTextblock4, Mode=OneWay}"/>
                         <TextBlock x:Name="tbTextblock5" RelativePanel.RightOf="tgSwitch2" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock5}" Visibility="{x:Bind bTextblock5, Mode=OneWay}"/>
+                                   Margin="24,24,24,24" Text="{x:Bind Textblock5, Mode=OneWay}" Visibility="{x:Bind bTextblock5, Mode=OneWay}"/>
                         <TextBlock x:Name="tbTextblock6" RelativePanel.RightOf="btButtonRe" Style="{ThemeResource BaseTextBlockStyle}"
-                                   Margin="24,24,24,24" Text="{x:Bind Textblock6}" Visibility="{x:Bind bTextblock6, Mode=OneWay}"/>
+                                   Margin="24,24,24,24" Text="{x:Bind Textblock6, Mode=OneWay}" Visibility="{x:Bind bTextblock6, Mode=OneWay}"/>
                     </RelativePanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
