--- a/Hausautomation/Pages/PageAll.xaml
+++ b/Hausautomation/Pages/PageAll.xaml
@@ -42,15 +42,15 @@
                         <Button x:Name="btButtonRe" RelativePanel.RightOf="tbTextblock1" Margin="65,85,15,24" Content="R"
                                 Visibility="{x:Bind bButton2, Mode=OneWay}" Click="btButtonRe_Click"/>
                         <ToggleSwitch x:Name="tgSwitch1" Margin="20,145,-100,24" RelativePanel.RightOf="tbTextblock1"
-                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind bSwitch1State, Mode=TwoWay}"
-                                Visibility="{x:Bind bSwitch1, Mode=OneWay}" Toggled="tgSwitch1_Toggled">
+                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind Switch1State, Mode=TwoWay}"
+                                Visibility="{x:Bind bSwitch1, Mode=OneWay}" >
                             <ToggleSwitch.RenderTransform>
                                 <CompositeTransform Rotation="-90"/>
                             </ToggleSwitch.RenderTransform>
                         </ToggleSwitch>
                         <ToggleSwitch x:Name="tgSwitch2" Margin="0,145,-100,24" RelativePanel.RightOf="tgSwitch1"
-                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind bSwitch2State, Mode=TwoWay}"
-                                Visibility="{x:Bind bSwitch2, Mode=OneWay}" Toggled="tgSwitch2_Toggled">
+                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind bSwitch2State, Mode=OneWay}"
+                                Visibility="{x:Bind bSwitch2, Mode=OneWay}" >
                             <ToggleSwitch.RenderTransform>
                                 <CompositeTransform Rotation="-90"/>
                             </ToggleSwitch.RenderTransform>
