--- a/Hausautomation/Pages/SettingsPage.xaml
+++ b/Hausautomation/Pages/SettingsPage.xaml
@@ -11,7 +11,7 @@
     <Grid Background="#FFB4BBFF">
         
         <TextBlock HorizontalAlignment="Left" Margin="10,16,0,0" Text="HomeMatic IP:" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbHMIP" HorizontalAlignment="Left" Height="20" Margin="120,10,0,0" Text="192.168.178.15" VerticalAlignment="Top" Width="145" TextChanged="tbHMIP_TextChanged"/>
+        <TextBox x:Name="tbHMIP" HorizontalAlignment="Left" Height="20" Margin="120,10,0,0" Text="homematic-ccu2" VerticalAlignment="Top" Width="145" TextChanged="tbHMIP_TextChanged"/>
         <TextBlock HorizontalAlignment="Left" Margin="280,16,0,0" Text="Port:" VerticalAlignment="Top"/>
         <TextBox x:Name="tbHMPO" HorizontalAlignment="Left" Height="20" Margin="320,10,0,0" Text="80" VerticalAlignment="Top" Width="64" TextChanged="tbHMPO_TextChanged"/>
         <CheckBox x:Name="cbOnline" Content="Online" HorizontalAlignment="Left" Margin="396,10,0,0" VerticalAlignment="Top" Click="cbOnline_Click" MinWidth="80"/>
