--- a/Hausautomation/Pages/PageAll.xaml
+++ b/Hausautomation/Pages/PageAll.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Margin="15,17" Style="{ThemeResource BodyTextBlockStyle}"
+        <TextBlock Grid.Row="0" Margin="12,17" Style="{ThemeResource BodyTextBlockStyle}"
                    Text="Klicken Sie auf die Checkbox links um die Geräte als Favoriten zu markieren"/>
 
         <ListView x:Name="lvDevices" Grid.Row="1" ItemsSource="{x:Bind Devicelist}">
@@ -43,14 +43,14 @@
                                 Visibility="{x:Bind bButton2, Mode=OneWay}" Click="btButtonRe_Click"/>
                         <ToggleSwitch x:Name="tgSwitch1" Margin="20,145,-100,24" RelativePanel.RightOf="tbTextblock1"
                                 OffContent="Aus" OnContent="Ein" IsOn="{x:Bind Switch1State, Mode=TwoWay}"
-                                Visibility="{x:Bind bSwitch1, Mode=OneWay}" >
+                                Visibility="{x:Bind bSwitch1, Mode=OneWay}">
                             <ToggleSwitch.RenderTransform>
                                 <CompositeTransform Rotation="-90"/>
                             </ToggleSwitch.RenderTransform>
                         </ToggleSwitch>
                         <ToggleSwitch x:Name="tgSwitch2" Margin="0,145,-100,24" RelativePanel.RightOf="tgSwitch1"
-                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind bSwitch2State, Mode=OneWay}"
-                                Visibility="{x:Bind bSwitch2, Mode=OneWay}" >
+                                OffContent="Aus" OnContent="Ein" IsOn="{x:Bind Switch2State, Mode=TwoWay}"
+                                Visibility="{x:Bind bSwitch2, Mode=OneWay}">
                             <ToggleSwitch.RenderTransform>
                                 <CompositeTransform Rotation="-90"/>
                             </ToggleSwitch.RenderTransform>
