--- a/Hausautomation/Pages/PageFav.xaml
+++ b/Hausautomation/Pages/PageFav.xaml
@@ -18,8 +18,8 @@
                         <TextBlock x:Name="tbTextblock1" RelativePanel.RightOf="bmImage" Style="{ThemeResource BaseTextBlockStyle}"
                                    Margin="24,24,24,24" Text="{x:Bind Textblock1, Mode=OneWay}"/>
                         <Slider x:Name="slSlider1" RelativePanel.RightOf="tbTextblock1" Orientation="Vertical" TickFrequency="10"
-                                Margin="24,24,24,24" Height="150" TickPlacement="Outside" Value="{x:Bind iSlider1, Mode=TwoWay}"
-                                Visibility="{x:Bind bSlider1, Mode=OneWay}" ValueChanged="slSlider1_ValueChanged"/>
+                                Margin="24,24,24,24" Height="150" TickPlacement="Outside" Value="{x:Bind Slider, Mode=TwoWay}"
+                                Visibility="{x:Bind bSlider1, Mode=OneWay}"/>
                         <Button x:Name="btButton1" RelativePanel.RightOf="tbTextblock1" Margin="25,110,24,24" Content="Aus"
                                 Visibility="{x:Bind bButton1, Mode=OneWay}" Click="btButton1_Click"/>
                         <Button x:Name="btButton2" RelativePanel.RightOf="tbTextblock1" Margin="27,60,24,24" Content="Ein"
