--- a/Hausautomation/Pages/SettingsPage.xaml
+++ b/Hausautomation/Pages/SettingsPage.xaml
@@ -9,29 +9,61 @@
 
     <!--<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">-->
     <Grid Background="#FFB4BBFF">
-        
-        <TextBlock HorizontalAlignment="Left" Margin="10,16,0,0" Text="HomeMatic IP:" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbHMIP" HorizontalAlignment="Left" Height="20" Margin="120,10,0,0" Text="homematic-ccu2" VerticalAlignment="Top" Width="145" TextChanged="tbHMIP_TextChanged"/>
-        <TextBlock HorizontalAlignment="Left" Margin="280,16,0,0" Text="Port:" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbHMPO" HorizontalAlignment="Left" Height="20" Margin="320,10,0,0" Text="80" VerticalAlignment="Top" Width="64" TextChanged="tbHMPO_TextChanged"/>
-        <CheckBox x:Name="cbOnline" Content="Online" HorizontalAlignment="Left" Margin="396,10,0,0" VerticalAlignment="Top" Click="cbOnline_Click" MinWidth="80"/>
-        <TextBlock HorizontalAlignment="Left" Margin="261,51,0,0" Text="Refresh:" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbRefresh" HorizontalAlignment="Left" Height="20" Margin="320,45,0,0" Text="60" VerticalAlignment="Top" Width="64" TextChanged="tbRefresh_TextChanged"/>
-        <TextBlock HorizontalAlignment="Left" Margin="395,51,0,0" Text="Sekunden" VerticalAlignment="Top"/>
 
+        <TextBlock HorizontalAlignment="Left" Margin="10,15,0,0" Text="HomeMatic IP:" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbHMIP" HorizontalAlignment="Left" Height="20" Margin="120,9,0,0" Text="homematic-ccu2" VerticalAlignment="Top" Width="145" TextChanged="tbHMIP_TextChanged"/>
+        <TextBlock HorizontalAlignment="Left" Margin="280,15,0,0" Text="Port:" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbHMPO" HorizontalAlignment="Left" Height="20" Margin="320,9,0,0" Text="80" VerticalAlignment="Top" Width="64" TextChanged="tbHMPO_TextChanged"/>
+        <CheckBox x:Name="cbOnline" Content="Online" HorizontalAlignment="Left" Margin="396,9,0,0" VerticalAlignment="Top" Click="cbOnline_Click" MinWidth="80"/>
+        <TextBlock HorizontalAlignment="Left" Margin="261,45,0,0" Text="Refresh:" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbRefresh" HorizontalAlignment="Left" Height="20" Margin="320,39,0,0" Text="60" VerticalAlignment="Top" Width="64" TextChanged="tbRefresh_TextChanged"/>
+        <TextBlock HorizontalAlignment="Left" Margin="395,45,0,0" Text="Sekunden" VerticalAlignment="Top"/>
 
-        <TextBlock HorizontalAlignment="Left" Margin="10,276,0,0" Text="SMTPServer" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbSMTPServer" HorizontalAlignment="Left" Height="20" Margin="95,270,0,0" Text="smtp.server.at" VerticalAlignment="Top" Width="145" TextChanged="tbSMTPServer_TextChanged"/>
-        <TextBlock HorizontalAlignment="Left" Margin="255,276,0,0" Text="Port" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbSMTPPort" HorizontalAlignment="Left" Height="20" Margin="290,270,0,0" Text="25" VerticalAlignment="Top" TextChanged="tbSMTPPort_TextChanged"/>
-        <CheckBox x:Name="cbSSL" Content="SSL" HorizontalAlignment="Left" Margin="396,270,0,0" VerticalAlignment="Top" Click="cbSSL_Click" MinWidth="60"/>
-        <TextBlock HorizontalAlignment="Left" Margin="10,307,0,0" Text="SMTPName" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbSMTPName" HorizontalAlignment="Left" Height="20" Margin="95,300,0,0" Text="email@host.at" VerticalAlignment="Top" Width="145" TextChanged="tbSMTPName_TextChanged"/>
-        <TextBlock HorizontalAlignment="Left" Margin="255,306,0,0" Text="Pass" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="pbSMTPPass" HorizontalAlignment="Left" Height="20" Margin="290,300,0,0" PlaceholderText="Password" VerticalAlignment="Top" Width="140" PasswordChanged="pbSMTPPass_TextChanged"/>
-        <Button Content="Send Test Email" HorizontalAlignment="Left" Margin="95,333,0,0" VerticalAlignment="Top" Width="144" Click="btTestEmail_Button_Click"/>
-        <CheckBox x:Name="cbAUT" Content="Authentification" HorizontalAlignment="Left" Margin="290,333,0,0" VerticalAlignment="Top" Click="cbAUT_Click"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,84,0,0" Text="Fritzbox 1:" VerticalAlignment="Top"/>
+        <TextBox x:Name="IP1" HorizontalAlignment="Left" Height="20" Margin="95,78,0,0" PlaceholderText="192.168.178.1" VerticalAlignment="Top" Width="145" Text="{x:Bind fb.IP1, Mode=TwoWay}"/>
+        <PasswordBox x:Name="PW1" HorizontalAlignment="Left" Height="20" Margin="245,78,0,0" PlaceholderText="Password 1" VerticalAlignment="Top" Width="140" Password="{x:Bind fb.PW1, Mode=TwoWay}"/>
+        <CheckBox x:Name="FB1" Content="aktiv" HorizontalAlignment="Left" Margin="396,78,0,0" VerticalAlignment="Top" IsChecked="{x:Bind fb.FB1, Mode=TwoWay}" MinWidth="60"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,114,0,0" Text="Fritzbox 2:" VerticalAlignment="Top"/>
+        <TextBox x:Name="IP2" HorizontalAlignment="Left" Height="20" Margin="95,108,0,0" PlaceholderText="192.168.178.2" VerticalAlignment="Top" Width="145" Text="{x:Bind fb.IP2, Mode=TwoWay}"/>
+        <PasswordBox x:Name="PW2" HorizontalAlignment="Left" Height="20" Margin="245,108,0,0" PlaceholderText="Password 2" VerticalAlignment="Top" Width="140" Password="{x:Bind fb.PW2, Mode=TwoWay}"/>
+        <CheckBox x:Name="FB2" Content="aktiv" HorizontalAlignment="Left" Margin="396,108,0,0" VerticalAlignment="Top" IsChecked="{x:Bind fb.FB2, Mode=TwoWay}" MinWidth="60"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,144,0,0" Text="Fritzbox 3:" VerticalAlignment="Top"/>
+        <TextBox x:Name="IP3" HorizontalAlignment="Left" Height="20" Margin="95,138,0,0" PlaceholderText="192.168.178.3" VerticalAlignment="Top" Width="145" Text="{x:Bind fb.IP3, Mode=TwoWay}"/>
+        <PasswordBox x:Name="PW3" HorizontalAlignment="Left" Height="20" Margin="245,138,0,0" PlaceholderText="Password 3" VerticalAlignment="Top" Width="140" Password="{x:Bind fb.PW3, Mode=TwoWay}"/>
+        <CheckBox x:Name="FB3" Content="aktiv" HorizontalAlignment="Left" Margin="396,138,0,0" VerticalAlignment="Top" IsChecked="{x:Bind fb.FB3, Mode=TwoWay}" MinWidth="60"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,174,0,0" Text="Fritzbox 4:" VerticalAlignment="Top"/>
+        <TextBox x:Name="IP4" HorizontalAlignment="Left" Height="20" Margin="95,168,0,0" PlaceholderText="192.168.178.4" VerticalAlignment="Top" Width="145" Text="{x:Bind fb.IP4, Mode=TwoWay}"/>
+        <PasswordBox x:Name="PW4" HorizontalAlignment="Left" Height="20" Margin="245,168,0,0" PlaceholderText="Password 4" VerticalAlignment="Top" Width="140" Password="{x:Bind fb.PW4, Mode=TwoWay}"/>
+        <CheckBox x:Name="FB4" Content="aktiv" HorizontalAlignment="Left" Margin="396,168,0,0" VerticalAlignment="Top" IsChecked="{x:Bind fb.FB4, Mode=TwoWay}" MinWidth="60"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,214,0,0" Text="Device 1:" VerticalAlignment="Top"/>
+        <TextBox x:Name="MAC1" HorizontalAlignment="Left" Height="20" Margin="95,208,0,0" PlaceholderText="00:00:00:00:00:00" VerticalAlignment="Top" Width="145" Text="{x:Bind fb.MAC1, Mode=TwoWay}"/>
+        <TextBox x:Name="EM1" HorizontalAlignment="Left" Height="20" Margin="245,208,0,0" PlaceholderText="email@host.at" VerticalAlignment="Top" Width="140" Text="{x:Bind fb.EM1, Mode=TwoWay}"/>
+        <CheckBox x:Name="DV1" Content="aktiv" HorizontalAlignment="Left" Margin="396,208,0,0" VerticalAlignment="Top" IsChecked="{x:Bind fb.DV1, Mode=TwoWay}" MinWidth="60"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,244,0,0" Text="Device 2:" VerticalAlignment="Top"/>
+        <TextBox x:Name="MAC2" HorizontalAlignment="Left" Height="20" Margin="95,238,0,0" PlaceholderText="00:00:00:00:00:00" VerticalAlignment="Top" Width="145" Text="{x:Bind fb.MAC2, Mode=TwoWay}"/>
+        <TextBox x:Name="EM2" HorizontalAlignment="Left" Height="20" Margin="245,238,0,0" PlaceholderText="email@host.at" VerticalAlignment="Top" Width="140" Text="{x:Bind fb.EM2, Mode=TwoWay}"/>
+        <CheckBox x:Name="DV2" Content="aktiv" HorizontalAlignment="Left" Margin="396,238,0,0" VerticalAlignment="Top" IsChecked="{x:Bind fb.DV2, Mode=TwoWay}" MinWidth="60"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,274,0,0" Text="Device 3:" VerticalAlignment="Top"/>
+        <TextBox x:Name="MAC3" HorizontalAlignment="Left" Height="20" Margin="95,268,0,0" PlaceholderText="00:00:00:00:00:00" VerticalAlignment="Top" Width="145" Text="{x:Bind fb.MAC3, Mode=TwoWay}"/>
+        <TextBox x:Name="EM3" HorizontalAlignment="Left" Height="20" Margin="245,268,0,0" PlaceholderText="email@host.at" VerticalAlignment="Top" Width="140" Text="{x:Bind fb.EM3, Mode=TwoWay}"/>
+        <CheckBox x:Name="DV3" Content="aktiv" HorizontalAlignment="Left" Margin="396,268,0,0" VerticalAlignment="Top" IsChecked="{x:Bind fb.DV3, Mode=TwoWay}" MinWidth="60"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,304,0,0" Text="Device 4:" VerticalAlignment="Top"/>
+        <TextBox x:Name="MAC4" HorizontalAlignment="Left" Height="20" Margin="95,298,0,0" PlaceholderText="00:00:00:00:00:00" VerticalAlignment="Top" Width="145" Text="{x:Bind fb.MAC4, Mode=TwoWay}"/>
+        <TextBox x:Name="EM4" HorizontalAlignment="Left" Height="20" Margin="245,298,0,0" PlaceholderText="email@host.at" VerticalAlignment="Top" Width="140" Text="{x:Bind fb.EM4, Mode=TwoWay}"/>
+        <CheckBox x:Name="DV4" Content="aktiv" HorizontalAlignment="Left" Margin="396,298,0,0" VerticalAlignment="Top" IsChecked="{x:Bind fb.DV4, Mode=TwoWay}" MinWidth="60"/>
+
+        <TextBlock HorizontalAlignment="Left" Margin="10,343,0,0" Text="SMTPServer" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbSMTPServer" HorizontalAlignment="Left" Height="20" Margin="95,337,0,0" Text="smtp.server.at" VerticalAlignment="Top" Width="145" TextChanged="tbSMTPServer_TextChanged"/>
+        <TextBlock HorizontalAlignment="Left" Margin="255,343,0,0" Text="Port" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbSMTPPort" HorizontalAlignment="Left" Height="20" Margin="290,337,0,0" Text="25" VerticalAlignment="Top" TextChanged="tbSMTPPort_TextChanged"/>
+        <CheckBox x:Name="cbSSL" Content="SSL" HorizontalAlignment="Left" Margin="396,337,0,0" VerticalAlignment="Top" Click="cbSSL_Click" MinWidth="60"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,374,0,0" Text="SMTPName" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbSMTPName" HorizontalAlignment="Left" Height="20" Margin="95,367,0,0" Text="email@host.at" VerticalAlignment="Top" Width="145" TextChanged="tbSMTPName_TextChanged"/>
+        <TextBlock HorizontalAlignment="Left" Margin="255,373,0,0" Text="Pass" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="pbSMTPPass" HorizontalAlignment="Left" Height="20" Margin="290,367,0,0" PlaceholderText="Password" VerticalAlignment="Top" Width="140" PasswordChanged="pbSMTPPass_TextChanged"/>
+        <Button Content="Send Test Email" HorizontalAlignment="Left" Margin="95,400,0,0" VerticalAlignment="Top" Width="144" Click="btTestEmail_Button_Click"/>
+        <CheckBox x:Name="cbAUT" Content="Authentification" HorizontalAlignment="Left" Margin="290,400,0,0" VerticalAlignment="Top" Click="cbAUT_Click"/>
 
     </Grid>
-    
+
 </Page>
