--- a/Hausautomation/Pages/PageLoad.xaml
+++ b/Hausautomation/Pages/PageLoad.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Hausautomation.Pages.MainPageHeader"
+    x:Class="Hausautomation.Pages.PageLoad"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Hausautomation"
