--- a/Hausautomation/MainPage.xaml
+++ b/Hausautomation/MainPage.xaml
@@ -16,7 +16,7 @@
                 <NavigationViewItemSeparator/>-->
                 <AutoSuggestBox x:Name="asbSuche" QueryIcon="Find" Width="170" Visibility="{x:Bind nvHausautomation.IsPaneOpen, Mode=OneWay}"
                                 PlaceholderText="Suche" ToolTipService.ToolTip="Suche" TextChanged="AutoSuggestBox_TextChanged"
-                                QuerySubmitted="AutoSuggestBox_QuerySubmitted" SuggestionChosen="AutoSuggestBox_SuggestionChosen"/>
+                                QuerySubmitted="AutoSuggestBox_QuerySubmitted"/>
                 <NavigationViewItemHeader Content="Hauptseite" Visibility="{x:Bind nvHausautomation.IsPaneOpen, Mode=OneWay}"/>
                 <NavigationViewItem Icon="AllApps" Content="Alle Geräte" Tag="PageAll" ToolTipService.ToolTip="Alle Geräte"/>
                 <NavigationViewItemHeader Content="Unterseiten" Visibility="{x:Bind nvHausautomation.IsPaneOpen, Mode=OneWay}"/>
