--- a/Hausautomation/Pages/PageAll.xaml
+++ b/Hausautomation/Pages/PageAll.xaml
@@ -18,7 +18,7 @@
         <TextBlock Grid.Row="0" Margin="12,17" Style="{ThemeResource BodyTextBlockStyle}"
                    Text="Klicken Sie auf die Checkbox links um die Geräte als Favoriten zu markieren"/>
 
-        <ListView x:Name="lvDevices" Grid.Row="1" ItemsSource="{x:Bind Devicelist}">
+        <ListView x:Name="lvDevices" Grid.Row="1" ItemsSource="{x:Bind Devicelist}" Loaded="lvDevices_Loaded">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="data:Device">
                     <RelativePanel>
